# tasklistener

./: .gitignore  BUILDING.md  Cargo.toml  INSTALLERS.md  LICENSE  README.md  SPEC.md
.github/workflows/: release.yml
apps/macos/: project.yml
apps/macos/App/: AppStore.swift  AppleRemindersBridge.swift  ConnectSheet.swift  IntegrationsTab.swift  MenuBarRoot.swift  SettingsRoot.swift  TaskListenerApp.swift
apps/macos/TaskListenerCore/: Package.swift
apps/macos/TaskListenerCore/Sources/CTaskListener/: module.modulemap  tasklistener.h
apps/macos/TaskListenerCore/Sources/TaskListenerCore/: TaskListenerCore.swift
apps/windows/: README.md
apps/windows/TaskListener/: App.xaml  App.xaml.cs  Core.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  TaskListener.csproj  app.manifest
apps/windows/TaskListener/Interop/: NativeBindings.cs
crates/core/: Cargo.toml
crates/core/src/: config.rs  db.rs  error.rs  keychain.rs  lib.rs  queue.rs  task.rs
crates/core/src/audio/: mod.rs
crates/core/src/providers/: mod.rs  notion.rs  things.rs  todoist.rs  webhook.rs
crates/ffi/: Cargo.toml
crates/ffi/include/: tasklistener.h
crates/ffi/src/: lib.rs
scripts/: build-macos.sh  build-windows.ps1  windows-installer.iss
