[package]
name = "tasklistener-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "tasklistener"
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
tasklistener-core = { path = "../core" }
tokio = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
parking_lot.workspace = true
once_cell = "1"
